--- a/Latex/Latex/main.tex
+++ b/Latex/Latex/main.tex
@@ -20,7 +20,7 @@
 
 \section{Basics}
 The main structure contains two parts, \emph{preamble} and \emph{body}.
-\subsection{preamble essence}
+\subsection{Preamble essence}
 \begin{tcolorbox}
 	\verb"\"documentclass\verb![]{}!
 \end{tcolorbox}
@@ -35,12 +35,13 @@ The standard ones being \emph{article}, \emph{book}, \emph{report} and \emph{let
 
 \subsection{Classes}
 
+\section{Table}
+If a table is too big, the \emph{overfull hbox} warning will be printed.
+\subsection{Packages}
+\begin{itemize}
+	\item tabularx
+\end{itemize}
 
-\section{Tikz}
-\begin{tikzpicture}
-	\draw circle (0.5);
-	\draw (-0.5, 0) to ["text"] (0.5, 0);
-\end{tikzpicture}
 
 \end{document}
 
