--- a/C/C99.md
+++ b/C/C99.md
@@ -16,7 +16,4 @@
 ---------------------------
 - inline
 - restrict
-
-# 
-- variable length arrays vere introduces in C99
-- // 
+> variable length arrays were introduces in C99
